# ai-webapp

./: .gitignore  run_website.sh
website_backend/: Cargo.toml  sql_setup.sh
website_backend/migrations/2024-03-27-023810_create_users/: up.sql
website_backend/src/: main.rs  mod.rs  schema.rs
website_backend/src/handlers/: chat.rs  delete.rs  greeting.rs  image_gen.rs  login.rs  mod.rs  register.rs
website_backend/src/middleware/: mod.rs  request_logger.rs
website_backend/src/models/: chat_message.rs  diesel_user.rs  image_gen.rs  mod.rs
website_backend/src/services/: database.rs  gpt.rs  mod.rs  webtoken.rs
website_spa/: package-lock.json  package.json
website_spa/public/: index.html
website_spa/src/: About.js  App.css  App.js  AuthProvider.js  Chat.css  Chat.js  Home.js  Home.module.css  ImageGen.css  ImageGen.js  Login.css  Login.js  PrivateRoute.js  Register.js  index.js
