[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
actix-files = "0.6"
actix-cors = "0.7"
reqwest = { version = "0.12.2", features = ["json"] }
serde_json = "1.0"
diesel = { version = "2.1.5", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
chrono = "0.4"